src/test/resources/AttributeCheck/negative/RedefineAttribute.ls
class A {

  syn a : int;

  p ("") {
    this.a = 13;
    this.a = 13;
  }

}
